--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
         <title>MemeGen</title>
     </head>
 
@@ -108,10 +108,10 @@
             </footer>
         </div>
 
-        <script src="/controller.js"></script>
-        <script src="/services/util.js"></script>
-        <script src="/services/upload-service.js"></script>
-        <script src="/services/storage-service.js"></script>
-        <script src="/services/meme-service.js"></script>
+        <script src="controller.js"></script>
+        <script src="services/util.js"></script>
+        <script src="services/upload-service.js"></script>
+        <script src="services/storage-service.js"></script>
+        <script src="services/meme-service.js"></script>
     </body>
 </html>
