--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <footer>
                 <div class="about-container" name="about" id="about">
-                    <div class="about-img"><img class="my-img" src="/img/me.jpeg" /></div>
+                    <div class="about-img"><img class="my-img" src="img/me.jpeg" /></div>
                     <div class="about-content">
                         <div class="about-text">
                             <span style="font-weight: bold">Roy Leybovitch</span> <br />
